# Reversi

./: .cproject  AIPlayer.cpp  AIPlayer.h  AIplayer.cpp  AIplayer.h  Board.cpp  Board.h  CMakeLists.txt  ConsoleDisplayer.cpp  ConsoleDisplayer.h  Disc.cpp  Disc.h  Displayer.cpp  Displayer.h  GameLogic.cpp  GameLogic.h  Gamer.h  HumanPlayer.cpp  HumanPlayer.h  Main.cpp  Menu.cpp  Menu.h  Player.cpp  Player.h  ReversiGame.cpp  ReversiGame.h  ReversiGameLogic.cpp  ReversiGameLogic.h  ReversieGame.cpp  ReversieGame.h  Shortcuts.h  helloWorld.cpp  main.cpp
Client/: AIPlayer.cpp  AIPlayer.h  Board.cpp  CMakeLists.txt  Client.cpp  Client.h  Command.h  CommandManager.cpp  CommandManager.h  CommandsManager.cpp  Displayer.cpp  Game.h  GameLogic.h  GetListCommand.cpp  GetListCommand.h  HumanPlayer.cpp  HumanPlayer.h  JoinGameCommand.cpp  JoinGameCommand.h  Main.cpp  Menu.cpp  Menu.h  Player.cpp  Player.h  PlayerCommand.h  PrintCommand.h  RemoteGame.cpp  RemoteGame.h  RemotePlayer.cpp  RemotePlayer.h  ReversieGame.cpp  ReversieGame.h  Shortcuts.h  StartGameCommand.cpp  StartGameCommand.h
Debug/: AIPlayer.d  AIplayer.d  Board.d  ConsoleDisplayer.d  Displayer.d  Game  GameLogic.d  HumanPlayer.d  Main.d  Menu.d  Player.d  ReversieGame.d  makefile  subdir.mk
Server/: CMakeLists.txt  CloseCommand.cpp  CloseCommand.h  Command.h  CommandStart.cpp  CommandStart.h  CommandsManager.cpp  CommandsManager.h  GamesList.cpp  GamesList.h  JoinCommand.cpp  JoinCommand.h  List_gamesCommand.cpp  List_gamesCommand.h  PlayCommand.cpp  PlayCommand.h  Server.cpp  Server.h  StartCommand.cpp  StartCommand.h  ThreadList.cpp  ThreadList.h  main.cpp
reversi_test/: CMakeLists.txt
reversi_test/Tests/: AITest.cpp  BoardTest.cpp  CMakeLists.txt  GameLogicTest.cpp  PlayerTest.cpp  maintest.cpp
